<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/scrowView_cadastro"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarCadastro"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.AppBarLayout>


        <ImageView
            android:layout_width="200dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_finance"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textoCadastro"
                android:text="@string/cadastro"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/no_economize"
                android:textColor="@color/segundaria"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_edit"
            android:orientation="vertical">

            <LinearLayout
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="13sp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_account"/>

                <EditText
                    android:nextFocusUp="@id/cadastro_layoutEditTextPassWord"
                    android:nextFocusLeft="@id/cadastro_layoutEditTextPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/cadastro_layoutEditTextNome"
                    android:background="@null"
                    android:hint="@string/usuario"
                    android:inputType="text"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="40dp"
                android:background="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="13sp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_lock"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/senha"
                    android:id="@+id/cadastro_layoutEditTextPassWord"
                    android:inputType="numberPassword"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="40dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="13sp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_lock"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/confirma_senha"
                    android:id="@+id/cadastro_layoutEditTextRepitaPassWord"
                    android:inputType="numberPassword"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="40dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:id="@+id/Cadastro_LinearlayoutDaRenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="13sp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_finance"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/mesada"
                    android:id="@+id/cadastro_layoutEditTextValorDeRendaMensal"
                    android:inputType="numberDecimal"/>
                <Spinner
                    android:layout_marginLeft="5dp"
                    android:id="@+id/cadastro_spinner_moeda"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"/>
            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/cadastro_layoutRelativeLayoutBtn">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/guardar"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>