<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:id="@+id/cardViewCompra"
	card_view:cardCornerRadius="6dp"
	card_view:cardElevation="2dp"
	android:background="#fff"
	card_view:cardUseCompatPadding="true">

	<LinearLayout
		android:background="?attr/selectableItemBackground"
		android:clickable="true"
		android:id="@+id/linearlayoutCompra"
		android:focusable="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_marginHorizontal="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="Descrição da compra"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="16sp"
					android:textStyle="bold"
					android:id="@+id/cardTextViewCompraDescricao"/>

			</LinearLayout>

		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginHorizontal="10dp"
			android:layout_marginTop="3dp"
			android:background="#BDBDBD"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dp"
				android:layout_marginBottom="5dp"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="center"
					android:orientation="vertical">
					
					<TextView
						android:textStyle="bold"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/Preco"
						android:textSize="12sp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="80€0"
						android:id="@+id/cardTextViewCompraPreco"/>
				</LinearLayout>

				<LinearLayout
					android:id="@+id/comment"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="center"
					android:orientation="vertical">

					<TextView
						android:textSize="12sp"
						android:textStyle="bold"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/Quantidade"/>

					<TextView
						android:text="2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:id="@+id/cardTextViewCompraQuantidade"
						android:textSize="12sp"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_weight="1"
					android:gravity="center"
					android:orientation="vertical">

					<TextView
						android:textSize="12sp"
						android:textStyle="bold"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/data"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="09/06/2021"
						android:id="@+id/cardTextViewCompraData"
						android:textSize="12sp"/>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

</android.support.v7.widget.CardView>

