<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:id="@+id/linear_layout_compra"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbarCompra"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
	</android.support.design.widget.AppBarLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
		android:gravity="center"
		android:orientation="vertical">

		<ImageView
			android:layout_width="200dp"
			android:layout_height="150dp"
			android:layout_gravity="center"
			android:background="@drawable/ic_finance"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="7"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="30dp"
			android:layout_marginTop="30dp"
			android:layout_marginEnd="30dp"
			android:background="@drawable/shape_edit"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="13sp">

				<ImageView
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:layout_gravity="center"
					android:background="@drawable/ic_tag"/>

				<EditText
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:layout_marginStart="10dp"
					android:id="@+id/compraEditTextDescricao"
					android:background="@null"
					android:hint="@string/descricao"
					android:inputType="textAutoCorrect"/>

			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginStart="40dp"
				android:background="@color/colorPrimary"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="13sp">

				<ImageView
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:layout_gravity="center"
					android:background="@drawable/ic_cash"/>

				<EditText
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:layout_marginStart="10dp"
					android:background="@null"
					android:hint="@string/preco"
					android:id="@+id/compraEditTextPreco"
					android:inputType="number|numberDecimal"/>

			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginStart="40dp"
				android:background="@color/colorPrimary"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="13sp">

				<ImageView
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:layout_gravity="center"
					android:background="@drawable/ic_cart_plus"/>

				<EditText
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:layout_marginStart="10dp"
					android:background="@null"
					android:id="@+id/compraEditTextQuantidade"
					android:hint="@string/quantidade"
					android:inputType="number"/>

			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginStart="40dp"
				android:background="@color/colorPrimary"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="13sp">

				<ImageView
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:layout_gravity="center"
					android:background="@drawable/ic_form_select"/>

				<Spinner
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:layout_marginStart="10dp"
					android:background="@null"
					android:id="@+id/compraSpinnerOrcamento"
					android:inputType="number"/>

			</LinearLayout>

		</LinearLayout>

		<!--TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginTop="15dp"
			android:layout_marginEnd="30dp"
			android:text="CANCELAR"
			android:textColor="#0052FF"
			android:id="@+id/compraTextView1Cancelar"/-->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="20dp"
			android:orientation="horizontal">

			<android.support.v7.widget.CardView
				xmlns:card_view="http://schemas.android.com/apk/res-auto"
				android:layout_width="0dp"
				android:layout_height="60dp"
				android:layout_weight="1"
				card_view:cardBackgroundColor="@color/colorPrimary"
				card_view:cardCornerRadius="6dp"
				card_view:cardElevation="3dp"
				card_view:cardUseCompatPadding="true">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:id="@+id/compraLinearLayoutBtnGuardar"
					android:background="?attr/selectableItemBackground"
					android:clickable="true"
					android:focusable="true">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:text="@string/comprar"
						android:textColor="@color/colorWhite"
						android:textSize="16sp"
						android:textStyle="bold"/>

				</LinearLayout>

			</android.support.v7.widget.CardView>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

